# m4atag

./: Dockerfile  README.md  m4atag.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: tag_conversions.md
src/: m4atag.py  tags.py
src/m4atag/: app.py  m4atag.py  tags.py  test_parser.py
tests/: Overlord OST CD1 01  'Overlord  ruler of death'.m4a  Scape Main.m4a
tests/m4atag/: runescape.m4a  test_app.py  test_m4atag.py
