[metadata]
name = m4atag
version = 0.0.1
author = Michael Van Dyk
author_email = biochemist@me.com
description = This project helps you tag m4a files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michaelBiochemist/m4atag
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent[options]
packages = find:
python_requires = >=3.7
include_package_data = True
