[metadata]
name = m4atag
version = 0.0.1
author = Michael Van Dyk
author_email = michael@biochemist.me
description = This project helps you tag m4a files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michaelBiochemist/m4atag
classifiers =
     Development Status :: 3 - Alpha
     Operating System :: POSIX :: Linux
     License :: OSI Approved :: GNU General Public License (GPL)
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    m4atag = m4atag.app:main

[flake8]
max-line-length = 88